src/objects/Referral_Assignment__c.object
<CustomObject>
    <description>REFFERALS - this object handles Read &amp; Read/Write Assignments for Referrals.</description>
    <fields>
        <fullName>Access_Level__c</fullName>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Being_Referred__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Being Referred</label>
        <referenceTo>Person_Being_Referred__c</referenceTo>
        <relationshipLabel>Referral Assignments</relationshipLabel>
        <relationshipName>Referral_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <label>Referral</label>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Referral Assignments</relationshipLabel>
        <relationshipName>Referral_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referral_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Referral Assignment</label>
    <nameField>
        <displayFormat>RA-{0}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>